# sdk-rs

./: Cargo.toml  LICENSE-Apache2.0  LICENSE-MIT  Makefile  README.md  cspell.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: channel.rs  error.rs  gateway.rs  lib.rs  message.rs  producer.rs  settings.rs
