[package]
name = "rhiaqey-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_bytes = "0.11"
async-trait = "0.1"
tokio = { version = "1.25", features = ["sync"] }
