[package]
name = "rhiaqey-sdk-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "experimental" }

[profile.release]
lto = true
debug = false
strip = "debuginfo"
overflow-checks = true
panic = "abort"
codegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_bytes = { version = "0.11" }
tokio = { version = "1.42", features = ["full"] }
